namespace ClinicFlow.Domain.Entities
{
    public class DoctorSchedule
    {

        public int Id { get; set; }

        public int DoctorId { get; set; }

        public DayOfWeek DayOfWeek { get; set; }

        public TimeOnly? StartTime { get; set; }

        public TimeOnly? EndTime { get; set; }

        public bool IsAvailable { get; set; } = false;

        public Doctor Doctor { get; set; } = null!;

    }
}
